--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .DS_Store
+.node_modules
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 .idea
 .vscode
-.github
-.env
+.pnp.js
+.pnp
 ehthumbs.db
 Thumbs.db
 _config.yml
