--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
-.DS_Store
-.node_modules
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-.idea
-.vscode
-.pnp.js
-.pnp
-ehthumbs.db
-Thumbs.db
-_config.yml
-node_modules
-dist
-yarn.lock
-package-lock.json
+/node_modules/
+/dist/
+/.git/
+/app/css/
+/**/_backstage
+/**/package-lock.json
+/**/Thumbs.db
+/**/*.DS_Store
