--- a/package.json
+++ b/package.json
@@ -1,70 +1,34 @@
 {
-  "name": "x-project",
-  "version": "2.0.0",
-  "description": "Starter kit for fast HTML / CSS / JS pages layout based on Gulp",
-  "keywords": [
-    "gulp",
-    "starter-kit",
-    "templating",
-    "boilerplate",
-    "bootstrap",
-    "fontawesome",
-    "slick",
-    "carousel",
-    "jquery"
-  ],
-  "author": {
-    "name": "Evgeniy Vashchuk",
-    "email": "evgeniy.vashchuk.mail@gmail.com",
-    "url": "https://evgeniy-vashchuk.github.io/"
-  },
-  "bugs": {
-    "url": "https://github.com/evgeniy-vashchuk/x-project/issues"
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/evgeniy-vashchuk/x-project.git"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "autoprefixer": "^9.7.3",
-    "browser-sync": "^2.26.7",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "del": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-dest-clean": "^0.5.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^3.0.0",
-    "gulp-include": "^2.4.1",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-newer": "^1.4.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-postcss": "^8.0.0",
-    "gulp-pug": "^4.0.1",
-    "gulp-pug-beautify": "0.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svgmin": "^2.2.0",
-    "gulp-terser": "^1.2.0",
-    "gulp-tinypng-compress": "^1.2.5",
-    "gulp-to-ico": "^1.0.0",
-    "gulp-zip": "^5.0.1",
-    "sort-css-media-queries": "^1.5.0",
-    "yargs": "^15.0.2"
-  },
+  "name": "sw",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
-    "npm-check-updates": "^4.0.1",
-    "slick-carousel": "^1.8.1",
-    "slick-lightbox": "^0.2.10"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
